package referentiel_api.entities;

public enum RoleUser {
    EN_ATTENTE,
    CHEF_PROJET,
    PMO,
    ADMIN,
    MEMBRE
}
